<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fernandoim.musicalstructureapp.MainActivity"
    android:background="@color/black">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:orientation="vertical">

                    <ImageView
                        style="@style/AlbumsImageStyle"
                        android:src="@drawable/album1" />

                    <TextView
                        android:id="@+id/album1"
                        style="@style/AlbumsStyle"
                        android:text="@string/album1"

                        />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/album2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight=".5"
                    android:orientation="vertical">

                    <ImageView
                        style="@style/AlbumsImageStyle"
                        android:src="@drawable/album2"/>

                    <TextView
                        style="@style/AlbumsStyle"
                        android:text="@string/album2" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/album3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:orientation="vertical">

                    <ImageView
                        style="@style/AlbumsImageStyle"
                        android:src="@drawable/album3" />

                    <TextView

                        style="@style/AlbumsStyle"
                        android:text="@string/album3" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/album4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight=".5"
                    android:orientation="vertical">

                    <ImageView
                        style="@style/AlbumsImageStyle"
                        android:src="@drawable/album4"/>

                    <TextView
                        style="@style/AlbumsStyle"
                        android:text="@string/album4" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/album5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:orientation="vertical">

                    <ImageView
                        style="@style/AlbumsImageStyle"
                        android:src="@drawable/album5" />

                    <TextView
                        style="@style/AlbumsStyle"
                        android:text="@string/album5"

                        />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/album6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight=".5"
                    android:orientation="vertical">

                    <ImageView
                        style="@style/AlbumsImageStyle"
                        android:src="@drawable/album6"/>

                    <TextView
                        style="@style/AlbumsStyle"
                        android:text="@string/album6" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/album7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:orientation="vertical">

                    <ImageView
                        style="@style/AlbumsImageStyle"
                        android:src="@drawable/album7" />

                    <TextView
                        style="@style/AlbumsStyle"
                        android:text="@string/album1"/>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/album8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight=".5"
                    android:orientation="vertical">

                    <ImageView
                        style="@style/AlbumsImageStyle"
                        android:src="@drawable/album8"/>

                    <TextView
                        style="@style/AlbumsStyle"
                        android:text="@string/album8" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <LinearLayout
                    android:id="@+id/album9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >

                    <ImageView
                        style="@style/AlbumsImageStyle"
                        android:src="@drawable/album9" />

                    <TextView
                        style="@style/AlbumsStyle"
                        android:text="@string/album1"/>


                </LinearLayout>



            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>